@@ -3,6 +3,7 @@ Section: sound
 Priority: optional
 Maintainer: Stein Magnus Jodal <stein.magnus@jodal.no>
 Build-Depends: debhelper (>= 9),
+               dh-python,
                mopidy (>= 1.0.8-2),
                python (>= 2.7),
                python-alsaaudio,
