@@ -5,6 +5,7 @@ mopidy-alsamixer (1.0.3-3) unstable; urgency=medium
   * Build-Depend on python-alsaaudio, so it doesn't have to be included in
     pydist-overrides.
   * Build-Depend on debhelper 9.
+  * Switch build system to pybuild.
 
  -- Stein Magnus Jodal <stein.magnus@jodal.no>  Tue, 18 Aug 2015 14:07:42 +0200
 
